# sysnetdev

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  run-tests.py
checkpoints/: model_test.pt
doc/demo/: SYSNet.md  decals_dr7.md
docs/demo/: readme.md
notebooks/: FFNN.ipynb  FeatureSelection.ipynb  FeatureSelectionL1.ipynb  LinearRegression.ipynb  SYSNet.ipynb  demo_decalsdr7.ipynb  post_process.ipynb  vizualize.ipynb
scripts/: app-mpi.py  app-multiprocess.py  app.py  appensemble.py  config.yaml  run.bash  setup.bash  submit.sh  sysnet-app
sysnet/: __init__.py  __main__.py  args.py  cli.py  init_sysnet.py  lab.py  lr_finder.py  models.py  train.py
sysnet/sources/: __init__.py  callbacks.py  feature_elimination.py  io.py  losses.py  lr_finder.py  models.py  train.py  trainmp.py  utils.py
tests/: test_DNN.py  validate_multiprocessing.ipynb
